<resources>
    <string name="app_name">pdm2-navigation-drawer-02</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_p1">1º Período</string>
    <string name="menu_p2">2º Período</string>
    <string name="menu_p3">3º Período</string>
    <string name="menu_p4">4º Período</string>
    <string name="menu_p5">5º Período</string>
    <string name="menu_p6">6º Período</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>