<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_p1">

    <fragment
        android:id="@+id/nav_p1"
        android:name="com.example.pdm2_navigation_drawer_02.ui.P1Fragment"
        android:label="@string/menu_p1"
        tools:layout="@layout/fragment_p1" />

    <fragment
        android:id="@+id/nav_p2"
        android:name="com.example.pdm2_navigation_drawer_02.ui.p2.P2Fragment"
        android:label="@string/menu_p2"
        tools:layout="@layout/fragment_p2" />

    <fragment
        android:id="@+id/nav_p3"
        android:name="com.example.pdm2_navigation_drawer_02.ui.p3.P3Fragment"
        android:label="@string/menu_p3"
        tools:layout="@layout/fragment_p3" />

    <fragment
        android:id="@+id/nav_p4"
        android:name="com.example.pdm2_navigation_drawer_02.ui.p4.P4Fragment"
        android:label="@string/menu_p4"
        tools:layout="@layout/fragment_p4" />

    <fragment
        android:id="@+id/nav_p5"
        android:name="com.example.pdm2_navigation_drawer_02.ui.p5.P5Fragment"
        android:label="@string/menu_p5"
        tools:layout="@layout/fragment_p5" />

    <fragment
        android:id="@+id/nav_p6"
        android:name="com.example.pdm2_navigation_drawer_02.ui.p6.P6Fragment"
        android:label="@string/menu_p6"
        tools:layout="@layout/fragment_p6" />

</navigation>